gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TrainerRegistrationException.java
package com.example.gymcrm.api.rest.error.exception;

public class TrainerRegistrationException extends RuntimeException {
    public TrainerRegistrationException(String message) {
        super(message);
    }
}
